# pandoc-gui

./: .gitignore  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: publish.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
src/: App.vue  app.css  app.html  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConversionHistory.svelte  ConversionHistory.vue  MarkdownEditor.svelte  MarkdownEditor.vue
src/lib/: app-state.ts  commands.ts  conversion-utils.ts  editor-utils.ts  event-handlers.ts  file-utils.ts  history-utils.ts  index.ts  message-utils.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/editor/: +page.svelte
src/types/: external.d.ts  mathjax.d.ts
