[package]
name = "pandoc-gui"
version = "0.1.2"
description = "A Tauri App for Pandoc"
authors = ["tangxiangong <tangxiangong@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pandoc_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
pandoc = "0.8"
tauri-plugin-dialog = "*"
open = "5"
dirs = "5.0"
